--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<div id="clearance" class="sign-up">
+<main id="clearance" class="sign-up">
   <h2><%= t(".title") %></h2>
   <%= form_for @user do |form| %>
     <%= render partial: '/users/form', object: form %>
@@ -11,4 +11,4 @@
       <%= link_to t(".sign_in"), sign_in_path %>
     </div>
   <% end %>
-</div>
+</main>
