--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,7 @@
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,700');
+@import "utils/variables";
 @import "utils/mixins";
+@import "base/global";
 @import "pages/sessions";
 @import "layouts/navigation";
