--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -21,7 +21,7 @@
         <%= link_to 'Sign in', sign_in_path, class: "nav-link" %>
         </li>
         <li class="navbar-item">
-        <%= link_to 'Log in', sign_up_path, class: "nav-link" %>
+        <%= link_to 'Sign up', sign_up_path, class: "nav-link" %>
         </li>
         <% end %>
     </ul>
