--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,9 +10,11 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class='navbar-nav ml-auto'>
       <li class="navbar-item"><a class="nav-link" href="#">Active</a></li>
-      <li class="navbar-item"><a class="nav-link" href="#">Active</a></li>
+
         <% if signed_in? %>
-        Signed in as: <%= current_user.email %>
+        <li class="navbar-item">
+          <%= link_to 'User profile', edit_user_path(current_user), class: "nav-link" %>
+        </li>
         <li class="navbar-item">
           <%= link_to 'Sign out', sign_out_path, class: "nav-link", method: :delete %>
         </li>
