--- a/app/assets/stylesheets/layouts/navigation.scss
+++ b/app/assets/stylesheets/layouts/navigation.scss
@@ -1,5 +1,5 @@
 .navbar {
-    background: rgba(255,255,255,0.8);
+    background: $translucent-white;
     @extend %bg-cover;
     a {
       color: $airbnb;
@@ -7,6 +7,21 @@
         color: darken( $airbnb, 30% );
       }
     }
+    .dropdown-menu {
+    top: 128%;
+    border: 0;
+    border-radius: 0;
+    padding: 0;
+    background: $translucent-white;
+
+    .dropdown-item {
+      padding: .5rem 1.8rem;
+      &:hover,&:focus {
+        background: rgba($airbnb, .9);
+        color:#fff;
+      }
+    }
+  }
 }
 .logo {
   width: 10rem;
