--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,11 @@
-You are here! 
+<main class="container">
+  <div class="row my-5">
+    <div class="col-4">
+      Your user pic should go here.
+    </div>
+    <div class="col-8">
+      <h1>Hi, I'm <%= current_user.first_name %></h1>
+      <h3>Joined <%= current_user.created_at.to_date %></h3>
+    </div>
+  </div>
+</main>
