Display error messages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,5 +3,5 @@
 @import "utils/variables";
 @import "utils/mixins";
 @import "base/global";
-@import "pages/sessions";
 @import "layouts/navigation";
+@import "pages/users"
