--- a/app/views/users/_edit_form.html.erb
+++ b/app/views/users/_edit_form.html.erb
@@ -1,12 +1,12 @@
-<div class="text-field">
+<div class="text-field col-6">
   <%= form.text_field :first_name, type: 'first_name', placeholder: "First Name" %>
 </div>
-<div class="text-field">
+<div class="text-field col-6">
   <%= form.text_field :last_name, type: 'last_name', placeholder: "Last Name" %>
 </div>
-<div class="text-field">
+<div class="text-field col-6">
   <%= form.text_field :email, type: 'email', placeholder: "Email address" %>
 </div>
-<div class="password-field">
+<div class="password-field col-6">
   <%= form.password_field :password, placeholder:"Password" %>
 </div>
