Styling for listing index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,4 +4,5 @@
 @import "utils/mixins";
 @import "base/global";
 @import "layouts/navigation";
-@import "pages/users"
+@import "pages/users";
+@import "pages/listings";
