--- a/app/assets/stylesheets/pages/users.scss
+++ b/app/assets/stylesheets/pages/users.scss
@@ -1,5 +1,5 @@
 .sign-in,.sign-up {
-  background: linear-gradient(to right, rgba(240, 194, 123, .5), rgba(75, 18, 72, .5)),url("hero.jpg");
+  @include hero-background(hero);
   background-size: cover;
   background-position: center;
   height: 100vh;
