--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,11 +9,21 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class='navbar-nav ml-auto'>
-      <li class="navbar-item"><a class="nav-link" href="#">Active</a></li>
 
         <% if signed_in? %>
         <li class="navbar-item dropdown">
-          <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Listings
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <%= link_to 'View listings', listings_path, class: "dropdown-item" %>
+            <%= link_to 'Edit listings', listings_path, class: "dropdown-item" %>
+          </div>
+        </li>
+
+
+        <li class="navbar-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           User Profile
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
