--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,11 @@
     </div>
     <div class="col-8">
       <h1>Hi, I'm <%= current_user.first_name %></h1>
+
       <h3>Joined <%= current_user.created_at.to_date %></h3>
+      <%= link_to edit_user_path(current_user) do %>
+         <i class='fa fa-pencil'></i> Edit Profile
+      <% end %>
     </div>
   </div>
 </main>
