Implement search form

--- a/app/assets/stylesheets/pages/listings.scss
+++ b/app/assets/stylesheets/pages/listings.scss
@@ -31,3 +31,15 @@
   border: 0;
   box-shadow: 0px 1px 20px 0px rgba(0, 0, 0, 0.15);
 }
+
+
+.new_listing {
+  label {
+    display: block;
+  }
+  .text-field, .text-area {
+    input, textarea  {
+      width: 100%;
+    }
+  }
+}
