--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,30 +1,35 @@
 <div class='row'>
-<div class="text-field col-12">
-  <%= form.label :name %>
-  <%= form.text_field :name, type: 'text', placeholder: "Listing Name" %>
-</div>
-<div class="text-area col-12">
-  <%= form.label :description %>
-  <%= form.text_area :description, type: 'text', placeholder: "Description" %>
-</div>
-<div class="text-field col-12">
-  <%= form.label :address %>
-  <%= form.text_field :address, type: 'text', placeholder: "Address" %>
-</div>
-<div class="number-field col-4">
-  <%= form.label :guest_pax %>
-  <%= form.number_field :guest_pax, min: 1, max: 20, step: :any, placeholder: 1  %>
-</div>
-<div class="number-field col-4">
-  <%= form.label :bedroom_count %>
-  <%= form.number_field :bedroom_count, min: 1, max: 20, step: :any, placeholder: 1 %>
-</div>
-<div class="number-field col-4">
-  <%= form.label :bathroom_count %>
-  <%= form.number_field :bathroom_count, min: 1, max: 20, step: :any, placeholder: 1 %>
-</div>
-<div class="text-field col-12">
-  <%= form.label :price_per_night %>
-  RM <%= form.text_field :price_per_night, type: 'text', placeholder: "RM" %>
-</div>
+  <div class="text-field col-12">
+    <%= form.label :name %>
+    <%= form.text_field :name, type: 'text', placeholder: "Listing Name" %>
+  </div>
+  <div class="text-area col-12">
+    <%= form.label :description %>
+    <%= form.text_area :description, type: 'text', placeholder: "Description" %>
+  </div>
+  <div class="text-field col-12">
+    <%= form.label :address %>
+    <%= form.text_field :address, type: 'text', placeholder: "Address" %>
+  </div>
+  <div class="number-field col-4">
+    <%= form.label :guest_pax %>
+    <%= form.number_field :guest_pax, min: 1, max: 20, step: :any, placeholder: 1  %>
+  </div>
+  <div class="number-field col-4">
+    <%= form.label :bedroom_count %>
+    <%= form.number_field :bedroom_count, min: 1, max: 20, step: :any, placeholder: 1 %>
+  </div>
+  <div class="number-field col-4">
+    <%= form.label :bathroom_count %>
+    <%= form.number_field :bathroom_count, min: 1, max: 20, step: :any, placeholder: 1 %>
+  </div>
+  <div class="text-field col-12">
+    <%= form.label :price_per_night %>
+    RM <%= form.text_field :price_per_night, type: 'text', placeholder: "RM" %>
+  </div>
+  <div class="text-field col-12">
+    <%= form.label :tag_list, "Tags (separated by commas)" %>
+    <%= form.text_field :tag_list, value: form.object.tag_list.to_s %>
+
+  </div>
 </div>
