--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -20,6 +20,7 @@
       <h1>Listings</h1>
     </div>
 
+    <div class='card-deck'>
     <% @listings.each do |listing| %>
     <div class='col-4'>
       <div class="card my-3">
@@ -27,12 +28,13 @@
         <div class="card-block p-3">
           <h4 class="card-title"><%= listing.name %></h4>
           <p class="card-text"><%= listing.description %></p>
+          <%= raw listing.tags.map(&:name).map { |t| link_to t, tag_path(t) }.join(', ') %>
           <%= link_to 'View listing', listing, class:"btn btn-primary" %>
         </div>
       </div>
     </div>
     <% end %>
-
+  </div>
 
 </div>
 </main>
