--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -14,7 +14,9 @@
   <div class="row">
     <div class="col-8">
       <h2>Description</h2>
-      <%= @listing.description %>
+      <%= @listing.description %><br>
+      <h3>Tags</h3>
+      <p> <%= raw @listing.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %></p>
     </div>
     <div class="col-4">
       <small>Hosted by:</small>
