--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row my-5">
     <div class="col-12">
       <h1 class='text-center'><%= @listing.name %></h1>
-      <% if current_user.id == @listing.user_id %>
+      <% if current_user.id == @listing.user_id || current_user.super_admin? %>
         <%= link_to 'Edit listing', edit_listing_path(@listing) %>
         <%= link_to 'Delete listing', listing_path(@listing), method: :delete %>
       <% end %>
