--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -24,7 +24,11 @@
     <% @listings.each do |listing| %>
     <div class='col-4'>
       <div class="card my-3">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <% if listing.photos.first %>
+          <%= image_tag listing.photos.first, class: "card-img-top"  %>
+        <% else %>
+          <%= image_tag 'placeholder.png', class: "card-img-top"  %>
+        <% end %>
         <div class="card-block p-3">
           <h4 class="card-title"><%= listing.name %></h4>
           <p class="card-text"><%= listing.description %></p>
