--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,4 +1,44 @@
-<section class="listing-carousel container d-flex align-items-center justify-content-center">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+  <% if @listing.photos.count > 1 %>
+    <% for x in 0..@listing.photos.count %>
+      <% break if x == (@listing.photos.count) %>
+      <% if x == 0 %>
+        <li data-target="#carouselExampleIndicators" data-slide-to="<%= x %>" class="active"></li>
+      <% else %>
+          <li data-target="#carouselExampleIndicators" data-slide-to="<%= x %>"></li>
+      <% end %>
+      <% x += 1 %>
+      <% end %>
+  <% end %>
+  </ol>
+
+<div class="carousel-inner" role="listbox">
+  <div class="carousel-item active">
+    <% if @listing.photos.first %>
+      <%= image_tag @listing.photos.first, class: "listing-photo d-block img-fluid"  %>
+    <% end %>
+  </div>
+  <% if @listing.photos.count > 1 %>
+    <% @listing.photos.shift %>
+    <% @listing.photos.each do |photo| %>
+    <div class="carousel-item">
+      <%= image_tag photo.url, class: "listing-photo d-block img-fluid"  %>
+    </div>
+    <% end %>
+  <% end %>
+</div>
+<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  <span class="sr-only">Previous</span>
+</a>
+<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  <span class="sr-only">Next</span>
+</a>
+</div>
+
+<section class="container d-flex align-items-center justify-content-center">
   <div class="row my-5">
     <div class="col-12">
       <h1 class='text-center'><%= @listing.name %></h1>
