--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -25,7 +25,7 @@
     <div class='col-4'>
       <div class="card my-3">
         <% if listing.photos.first %>
-          <%= image_tag listing.photos.first, class: "card-img-top"  %>
+          <%= image_tag listing.photos.first.thumb, class: "card-img-top"  %>
         <% else %>
           <%= image_tag 'placeholder.png', class: "card-img-top"  %>
         <% end %>
