--- a/app/assets/stylesheets/layouts/navigation.scss
+++ b/app/assets/stylesheets/layouts/navigation.scss
@@ -1,6 +1,6 @@
 .navbar {
     background: $translucent-white;
-    box-shadow: 0px 1px 20px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: $shadow;
     background-size: cover;
     background-position: center;
     a {
