--- a/app/assets/stylesheets/pages/users.scss
+++ b/app/assets/stylesheets/pages/users.scss
@@ -56,7 +56,7 @@
     }
 }
 .user-avatar {
-    // width: 300px;
-    // height: 300px;
+    min-width: 80%;
     object-fit: cover;
+    box-shadow: $shadow;
 }
