--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <main class="container">
   <div class="row my-5">
     <div class="col-4">
-      <%= image_tag(@user.avatar_url, class: "user-avatar rounded-circle") if @user.avatar? %>
+      <%= image_tag(@user.avatar.thumb.url, class: "user-avatar rounded-circle") if @user.avatar? %>
     </div>
     <div class="col-8">
       <h1>Edit user profile</h1>
