Implement datepicker for reservations and reservation index

--- a/app/assets/stylesheets/base/global.scss
+++ b/app/assets/stylesheets/base/global.scss
@@ -16,6 +16,10 @@ a {
   &:hover,&:focus {
     background: darken( $airbnb, 30% );
   }
+  a {
+    color: #fff;
+    text-decoration: none!important;
+  }
 }
 
 .btn-secondary {
