Stylings for reservations

--- a/app/assets/stylesheets/base/global.scss
+++ b/app/assets/stylesheets/base/global.scss
@@ -39,3 +39,15 @@ a {
     padding: 1rem;
   }
 }
+.side-box {
+    background: #fff;
+    padding: 2rem;
+    border-radius: 10px;
+}
+.form-input {
+  width: 100%;
+    padding: .5rem;
+    border-radius: 5px;
+    border: 1px solid rgba(220, 220, 220, 0.99);
+    margin-bottom: 1rem;
+}
