--- a/app/assets/stylesheets/pages/listings.scss
+++ b/app/assets/stylesheets/pages/listings.scss
@@ -30,9 +30,8 @@
 .card {
   border: 0;
   box-shadow: $shadow;
+  height: 100%;
 }
-
-
 .new_listing {
   label {
     display: block;
@@ -50,7 +49,17 @@
 .card-deck {
   width: 100%;
 }
-
+.card-block {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+}
+.card-btn {
+  text-align: center;
+    justify-self: flex-end;
+    align-self: center;
+}
 .listing-photo {
   height: 60vh;
   object-fit: cover;
