--- a/app/assets/stylesheets/pages/reservations.scss
+++ b/app/assets/stylesheets/pages/reservations.scss
@@ -1,7 +1,12 @@
+.reservation-wrapper {
+  box-shadow: $shadow;
+  border-radius: 20px;
+}
 .reservation-photo {
     max-height: 120px;
     object-fit: cover;
     width: 100%;
+    border-radius: 20px 20px 0 0;
 }
 .reservation-photo-wrapper, .reservation-hero {
   position: relative;
@@ -10,6 +15,7 @@
   max-height: 30vh;
   object-fit: cover;
   width: 100%;
+  border-radius: 20px 20px 0 0;
 }
 .reservation-photo-wrapper::before, .reservation-hero::before {
     content: '';
@@ -17,6 +23,7 @@
     background: rgba(52, 58, 64, 0.54);
     width: 100%;
     height: 100%;
+    border-radius: 20px 20px 0 0;
 }
 .reservation-title-wrapper, .reservation-hero-title {
     position: absolute;
@@ -27,6 +34,7 @@
 }
 .reservation-details-wrapper {
     background: #fff;
+    border-radius: 0 0 20px 20px;
     .row {
       align-items: center;
     }
