--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -25,7 +25,7 @@
           <p><%= @reservation.check_out.strftime("%d %B %Y") %> </p>
         </div>
         <div class='col-12'>
-          <h3 class='mb-5'>Listing Description</h3>
+          <h3 class='mt-5'>Listing Description</h3>
           <p><%= @reservation.listing.description %>
         </div>
       </div>
@@ -33,8 +33,10 @@
     <div class="col-4">
       <div class="side-box">
         <h2>Reservation Options</h2>
-          <%= link_to 'Edit listing', edit_user_reservation_path(current_user,@reservation) %>
-          <%= link_to 'Delete listing', user_reservation_path(current_user,@reservation), method: :delete %>
+          <ul>
+          <li><%= link_to 'Edit listing', edit_user_reservation_path(current_user,@reservation) %></li>
+          <li><%= link_to 'Delete listing', user_reservation_path(current_user,@reservation), method: :delete %></li>
+        </ul>
 
       </div>
     </div>
