--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -92,6 +92,8 @@
           <%= form.submit class: 'btn btn-primary' %>
         </div>
         <% end %>
+        <%= render 'reservations/error_messages' %>
+
       </div>
     </div>
   </div>
