Implement calendar where dates are disabled based on previous bookings

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <script src="https://use.fontawesome.com/cbd5fe6f11.js"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <link href="http://code.gijgo.com/1.5.1/css/gijgo.css" rel="stylesheet" type="text/css" />
+    <%= Gon::Base.render_data %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
