--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "bootstrap";
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,700');
+@import url('https://unpkg.com/flatpickr/dist/flatpickr.min.css');
 @import "utils/variables";
 @import "utils/mixins";
 @import "base/global";
