Create payment token

--- a/app/assets/stylesheets/base/global.scss
+++ b/app/assets/stylesheets/base/global.scss
@@ -20,6 +20,9 @@ a {
     color: #fff;
     text-decoration: none!important;
   }
+  .disabled, &:disabled {
+    background: desaturate( $airbnb, 80% );
+  }
 }
 
 .btn-secondary {
