Payment feature implemented

--- a/app/assets/stylesheets/pages/payments.scss
+++ b/app/assets/stylesheets/pages/payments.scss
@@ -44,7 +44,7 @@
 .braintree-hosted-fields-valid {
 }
 
-#cardForm {
+#checkout_form {
   max-width: 50.75em;
   margin: 0 auto;
   padding: 1.875em;
