--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,5 +1,5 @@
 <div class="demo-frame">
-      <%= form_for :checkout_form, html: { id: "cardForm"} do |form| %>
+      <%= form_for :checkout_form, url: payments_checkout_path, html: { id: "checkout_form"} do |form| %>
 
         <%= form.label :card_number, "Credit Card Number", html: {class: "hosted-fields--label"} %>
         <div id="card-number" class="hosted-field"></div>
