--- a/app/assets/stylesheets/base/global.scss
+++ b/app/assets/stylesheets/base/global.scss
@@ -46,6 +46,7 @@ a {
     background: #fff;
     padding: 2rem;
     border-radius: 10px;
+    text-align: center;
 }
 .form-input {
   width: 100%;
