--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,22 +1,40 @@
-<div class="demo-frame">
-      <%= form_for :checkout_form, url: payments_checkout_path, html: { id: "checkout_form"} do |form| %>
+<main class='container'>
+  <div class='row my-5'>
+    <div class='col-12'>
+      <h1 class='text-center'>Payment for your reservation at <%= @reservation.listing.name %> </h1>
+      <div class='row'>
+        <div class="check-out-wrapper my-3 col-8">
+          <%= form_for :checkout_form, url: payments_checkout_path, html: { id: "checkout_form"} do |form| %>
 
-        <%= form.label :card_number, "Credit Card Number", html: {class: "hosted-fields--label"} %>
-        <div id="card-number" class="hosted-field"></div>
+            <%= form.label :card_number, "Credit Card Number", html: {class: "hosted-fields--label"} %>
+            <div id="card-number" class="hosted-field"></div>
 
-        <%= form.label :expiration_date, "Expiration Date", html: {class: "hosted-fields--label"} %>
-        <div id="expiration-date" class="hosted-field"></div>
+            <%= form.label :expiration_date, "Expiration Date", html: {class: "hosted-fields--label"} %>
+            <div id="expiration-date" class="hosted-field"></div>
 
-        <%= form.label :cvv, "CVV", html: {class: "hosted-fields--label"} %>
-        <div id="cvv" class="hosted-field"></div>
+            <%= form.label :cvv, "CVV", html: {class: "hosted-fields--label"} %>
+            <div id="cvv" class="hosted-field"></div>
 
-        <%= form.hidden_field "payment_method_nonce" %>
+            <%= form.hidden_field "payment_method_nonce" %>
 
-        <div class="button-container">
-          <%= form.submit "Purchase", disabled: true, class: "btn btn-primary", id: "submit-payment-btn" %>
+            <%= form.hidden_field :amount, value: number_with_precision(@reservation.total_price, precision: 2)  %>
+
+
+          </div>      <!-- end form -->
+          <div class='col-4 my-5'>
+            <div class='side-box'>
+              <h2>Total to Pay</h2>
+              <h1>RM <%= @reservation.total_price %>
+                <div class="button-container">
+                  <%= form.submit "Purchase", disabled: true, class: "btn btn-primary", id: "submit-payment-btn" %>
+                </div>
+              <% end %>
+            </div>
+          </div>
         </div>
-      <% end %>
-</div>
+    </div>
+  </div>
+</main>
 
 <!-- Load the Client component. -->
 <script src="https://js.braintreegateway.com/web/3.6.3/js/client.min.js"></script>
