--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -35,8 +35,8 @@
     </div>
     <div class="col-4">
       <div class="side-box">
-        <h2>Total Price</h2>
-        <h5><%= number_with_precision(@reservation.total_price, precision: 2) %></h5>
+        <h5>Total Price</h5>
+        <h2>RM <%= number_with_precision(@reservation.total_price, precision: 2) %></h2>
 
           <%= button_tag(class: "btn-primary btn") do %>
             <%= link_to "Make payment", payment_new_path(@reservation), 'data-turbolinks' => false %>
