--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -13,8 +13,9 @@
   <div class="row my-5">
     <div class="col-8">
       <div class="row">
-        <div class='col-12'>
-          <h1 class='mb-4'>Reservation Details</h1>
+        <div class='col-12 mb-4'>
+          <h1>Reservation Details</h1>
+          <%= link_to 'Delete Reservation', user_reservation_path(current_user,@reservation), method: :delete %>
         </div>
         <div class='col-6'>
           <h3>Check-in Date</h3>
@@ -25,7 +26,7 @@
           <p><%= @reservation.check_out.strftime("%d %B %Y") %> </p>
         </div>
         <div class='col-12'>
-          <%= link_to 'Delete Reservation', user_reservation_path(current_user,@reservation), method: :delete %>
+
         </div>
         <div class='col-12'>
           <h3 class='mt-5'>Listing Description</h3>
